fix date & time picker formats

--- a/TestMVC/Views/Home/Index.cshtml
+++ b/TestMVC/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <section class="featured">
         <div class="content-wrapper">
             <p>
-                @Html.GlobalSauce(Components.JqueryGlobalization, Components.JqGrid, Components.JqueryUIDatePicker)
+                @Html.GlobalSauce(Components.JqueryGlobalization, Components.JqGrid, Components.JqueryUIDatePicker, Components.JqueryUITimePicker)
             </p>
         </div>
     </section>
