fix jqgrid date & time formats

--- a/TestMVC/Views/Home/Index.cshtml
+++ b/TestMVC/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <section class="featured">
         <div class="content-wrapper">
             <p>
-                @Html.GlobalSauce(Components.ckeditor)
+                @Html.GlobalSauce(Components.JqGrid)
             </p>
         </div>
     </section>
@@ -20,7 +20,7 @@
 {
     <script src="~/Scripts/globalize/globalize.js" type="text/javascript"></script>
     <script type="text/javascript">
-        @Html.GlobalSauce(Components.ckeditor)
+        @Html.GlobalSauce(Components.JqGrid)
 
 
         $(document).ready(function () {
